--- a/central-js/client/index.html
+++ b/central-js/client/index.html
@@ -157,6 +157,8 @@
 <script src="app/documents/controllers/documentsuser.controller.js"></script>
 <script src="app/documents/controllers/modal.controller.js"></script>
 <script src="app/documents/document.js"></script>
+<script src="app/documents/factories/bankidaddresses.factory.js"></script>
+<script src="app/documents/factories/bankidaddressesfactual.factory.js"></script>
 <script src="app/documents/factories/bankiddocuments.factory.js"></script>
 <script src="app/documents/factories/bankiddocumentspassport.factory.js"></script>
 <script src="app/journal/controllers/journal.controller.js"></script>
