place.controller - replace the serviceCity.controller and ServiceBuiltInController

--- a/central-js/client/app/documents/bankid/index.html
+++ b/central-js/client/app/documents/bankid/index.html
@@ -1,7 +1,7 @@
 <div class="row">
     <div class="list-group-item"
          ng-hide="authProcess">
-        <span>Крок 1. Увійдіть в систему через</span>
+        <span>Крок 1. Увійдіть в систему через FIXME2</span>
         <button style="display: none;"
                 class="btn btn-info"><i class="icon-door-lock"></i><span class="btn-text">igov.org.ua</span></button>
         <a class="btn btn-info"
