--- a/central-js/client/app/service/auth/serviceAuthBlock.html
+++ b/central-js/client/app/service/auth/serviceAuthBlock.html
@@ -1,5 +1,5 @@
 <div class="list-group-item">
-    <span>Крок {{nStep}}. Увійдіть в систему через</span>
+    <span>Крок {{nStep}}. Увійдіть в систему через FIXME</span>
     <button style="display: none;" class="btn btn-info"><i class="icon-door-lock"></i><span class="btn-text">igov.org.ua</span></button>
     <a class="btn btn-info" target="_self"
         ng-href="{{$location.protocol()}}://{{$location.host()}}:{{$location.port()}}/auth/bankID?link={{$location.protocol()}}://{{$location.host()}}:{{$location.port()}}{{redirectUri}}"
