--- a/central-js/client/app/service/city/built-in/bankid.submitted.html
+++ b/central-js/client/app/service/city/built-in/bankid.submitted.html
@@ -5,7 +5,7 @@
     <div class="list-group-item disabled">
         <div class="row no-margin-bottom">
             <div class="col-md-12 form-inline">
-                <span class="step">Крок 1. Оберіть свій регіон </span>
+                <span class="step">Крок 1. Оберіть свій регіон - CLONE: service/city/built-in/bankid.submitted.html </span>
 
                 <div style="display:inline-block">
                     <span>Область</span>
