--- a/central-js/client/app/service/region/content.html
+++ b/central-js/client/app/service/region/content.html
@@ -5,7 +5,7 @@
          ng-class="{'disabled': data.region}">
         <div class="row no-margin-bottom">
             <div class="col-md-11 form-inline">
-                <strong><span>Крок 1. Оберіть свій регіон </span></strong>
+                <strong><span>Крок 1. Оберіть свій регіон - CLONE: service/region/content.html </span></strong>
 
                 <div style="display:inline-block">
                     <span>Область</span>
