--- a/central-js/client/app/service/city/built-in/index.html
+++ b/central-js/client/app/service/city/built-in/index.html
@@ -3,7 +3,7 @@
          ng-class="{'disabled': data.city}">
         <div class="row no-margin-bottom">
             <div class="col-md-11 form-inline">
-                <span class="step">Крок 1. Оберіть свій регіон </span>
+                <span class="step">Крок 1. Оберіть свій регіон - CLONE: service/city/built-in/index.html</span>
 
                 <div style="display:inline-block">
                     <span>Область</span>
