--- a/central-js/client/app/service/place/content.html
+++ b/central-js/client/app/service/place/content.html
@@ -1,9 +1,49 @@
+<!-- div class="list-group">
+    <div class="list-group-item"
+         ng-class="{'disabled': data.city}">
+        <div class="row no-margin-bottom">
+            <div class="col-md-11 form-inline">
+                <span class="step">Крок 1. Оберіть свій регіон - CLONE: service/city/built-in/index.html</span>
+
+                <div style="display:inline-block">
+                    <span>Область</span>
+                    <select class="form-control"
+                            name="region"
+                            ng-model="data.region"
+                            ng-options="region as region.sName for region in [data.region] | orderBy:'sName'"
+                            ng-disabled="data.city"></select>
+                </div>
+                <div style="display:inline-block"
+                     ng-if="ngIfCity()">
+                    <span>Місто</span>
+                    <select class="form-control"
+                            name="city"
+                            ng-model="data.city"
+                            ng-options="city as city.sName for city in [data.city] | orderBy:'sName'"
+                            ng-disabled="data.city"></select>
+                </div>
+            </div>
+            <div class="col-md-1"
+                 ng-if="data.city">
+                <div class="link-button">
+                    <a ng-click="step1()">Змінити</a>
+                </div>
+            </div>
+        </div>
+    </div>
+    <service-auth-block
+            ng-if="ngIfStep2()"
+            n-step="2"
+            redirect-uri="{{$state.href('index.service.general.city.built-in.bankid', {'id': service.nID, 'region': getRegionId(), 'city': getCityId() })}}"
+            ></service-auth-block>
+</div -->
+
 <div class="list-group">
     <div class="list-group-item"
          ng-class="{'disabled': data.city}">
         <div class="row no-margin-bottom">
             <div class="col-md-11 form-inline">
-                <span class="step">Крок 1. Оберіть свій регіон </span>
+                <span class="step">Крок 1. Оберіть свій регіон - Place</span>
 
                 <div style="display:inline-block">
                     <span>Область</span>
@@ -95,7 +135,18 @@
             </div>
         </div>
     </div>
-    <div class="list-group-item"
-         ng-show="ngIfStep2()"
-         ui-view="status"></div>
+
+    <!-- step 2 -->
+    <div ng-if="ngIfStep2()">
+
+      <div class="list-group-item" 
+      ui-view="status"></div>
+
+      <!-- STATE: index.service.general.city.built-in -->
+      
+      <service-auth-block
+              n-step="2"
+              redirect-uri="{{$state.href('index.service.general.city.built-in.bankid', {'id': service.nID, 'region': getRegionId(), 'city': getCityId() })}}"
+              ></service-auth-block>
+    </div>
 </div>
