--- a/dashboard-js/client/app/services/services.html
+++ b/dashboard-js/client/app/services/services.html
@@ -44,7 +44,7 @@
           <div ng-include src="'app/services/flow_slots/index.html'"></div>
         </tab>
 
-        <tab heading="Переглянути наявний грфік та заняті слоти">
+        <tab heading="Переглянути наявний грфік та зайняті слоти">
           <div class="spacer15"></div>
           <div ng-include src="'app/services/calendar/index.html'"></div>
         </tab>
