--- a/dashboard-js/client/app/services/flow_slots/index.html
+++ b/dashboard-js/client/app/services/flow_slots/index.html
@@ -12,30 +12,30 @@
           <label class="col-md-1 control-label">Період з</label>
           <div class="col-md-3">
             <p class="input-group">
-              <input type="date"
+              <input type="text"
                      class="form-control"
-                     datepicker-popup
+                     datepicker-popup="dd MMMM yyyy"
                      ng-model="data.sDateStart"
-                     is-open="isDatepickerOpened"
-                     ng-required="true"
+                     ng-click="open($event)"
+                     is-open="opened"
                      close-text="Close" />
                 <span class="input-group-btn">
-                  <button type="button" class="btn btn-default" ng-click="openDatepicker()"><i class="glyphicon glyphicon-calendar"></i></button>
+                  <button type="button" class="btn btn-default" ng-click="open($event)"><i class="glyphicon glyphicon-calendar"></i></button>
                 </span>
             </p>
           </div>
           <label class="col-md-1 control-label">до</label>
           <div class="col-md-3">
             <p class="input-group">
-              <input type="date"
+              <input type="text"
                      class="form-control"
-                     datepicker-popup
+                     datepicker-popup="dd MMMM yyyy"
                      ng-model="data.sDateStop"
-                     is-open="isDatepickerOpened"
-                     ng-required="true"
+                     is-open="opened"
+                     ng-click="open($event)"
                      close-text="Close" />
                 <span class="input-group-btn">
-                  <button type="button" class="btn btn-default" ng-click="openDatepicker()"><i class="glyphicon glyphicon-calendar"></i></button>
+                  <button type="button" class="btn btn-default" ng-click="open($event)"><i class="glyphicon glyphicon-calendar"></i></button>
                 </span>
             </p>
           </div>
@@ -46,38 +46,26 @@
     </div>
 
     <div class="row">
-      <table class="table">
-        <thead>
-        <tr>
-          <th>№</th>
-          <th>Проміжок</th>
-          <th>Статус</th>
-        </tr>
-        </thead>
-        <tbody>
+      <div class="col-md-7">
+        <table class="table">
+          <thead>
+          <tr>
+            <th>Проміжок</th>
+            <th>Статус</th>
+          </tr>
+          </thead>
 
-        <tr ng-repeat="one in list.aDay">
-          <th scope="row">{{one.aSlot[0].nID}}</th>
-          <td>{{one.sDate}}</td>
-          <td> о {{one.aSlot[0].sTime}}</td>
-          <td>
-            <div class="btn-group" dropdown>
-              <button type="button" class="btn btn-default">Редагувати</button>
-              <button type="button" class="btn btn-danger" dropdown-toggle>
-                <i class="glyphicon glyphicon-trash"></i>
-              </button>
-            </div>
-          </td>
-        </tr>
-
-        <tr>
-          <th scope="row"></th>
-          <td></td>
-          <td></td>
-          <td><button class="btn btn-primary" ng-click="open()">Добавити</button></td>
-        </tr>
-        </tbody>
-      </table>
+          <tbody>
+          <tr ng-repeat="slot in result">
+            <td>{{slot.sTime}} - {{slot.sToTime}}</td>
+            <td>
+              <span class="label label-success" ng-show="slot.bFree">Вільно</span>
+              <span class="label label-danger" ng-show="!slot.bFree">Зайнято</span>
+            </td>
+          </tr>
+          </tbody>
+        </table>
+      </div>
     </div>
 
   </div>
