--- a/dashboard-js/client/app/services/modal/modal.html
+++ b/dashboard-js/client/app/services/modal/modal.html
@@ -98,10 +98,11 @@
       </div>
     </div>
 
-    <div class="alert alert-warning" role="alert" ng-hide="atLeastOneWeekDayChosen()">Будь ласка, оберіть хоча б один день тижня</div>
+    <div class="alert alert-danger" role="alert" ng-hide="atLeastOneWeekDayChosen()">Будь ласка, оберіть хоча б один день тижня</div>
+    <div class="alert alert-danger" role="alert" ng-hide="timeOrderIsCorrect()">Час закінчення роботі повинен бути пізніший за час початку</div>
 
     <div class="modal-footer">
-      <button type="submit" class="btn btn-primary" ng-show="atLeastOneWeekDayChosen()" ng-click="save()">Сохранити</button>
+      <button type="submit" class="btn btn-primary" ng-show="showSave()" ng-click="save()">Сохранити</button>
       <button class="btn btn-warning" type="button" ng-click="cancel()">Відмінити</button>
     </div>
   </form>
