fix print form declaration

--- a/wf-region/src/main/resources/pattern/print/subsidy_declaration.html
+++ b/wf-region/src/main/resources/pattern/print/subsidy_declaration.html
@@ -145,7 +145,7 @@
             </tr>
             <tr>
                 <td class="h10">[bankIdlastName] [bankIdfirstName] [bankIdmiddleName]</td>
-                <td>[date_of_birth]</td>
+                <td>[bankIdbirthDay]</td>
                 <td>[bankIdPassport]</td>
                 <td>[bankIdinn]</td>
                 <td></td>
