єдиний компонент вибору місця placeControl.js (wip-1)

--- a/central-js/client/app/service/city/built-in/bankid.html
+++ b/central-js/client/app/service/city/built-in/bankid.html
@@ -2,7 +2,10 @@
 <div style="margin-bottom:20px; font-size:18px;color:#cccccc;">{{service.sSubjectOperatorName}}</div-->
 
 <div class="list-group">
-    <div class="list-group-item disabled">
+    <!-- FIXME -->
+    <place-control>
+
+<!-- WAS: <div class="list-group-item disabled">
         <div class="row no-margin-bottom">
             <div class="col-md-11 form-inline">
                 <span class="step">Крок 1. Оберіть свій регіон - CLONE: service/city/built-in/bankid.html</span>
@@ -29,7 +32,10 @@
                 </div>
             </div>
         </div>
-    </div>
+    </div> -->
+    
+    </place-control>
+    
     <div class="list-group-item disabled">
         <div class="row no-margin-bottom">
             <div class="col-md-11">Крок 2. Ви увійшли як {{data.formData.params.bankIdfirstName.value}}
