--- a/central-js/client/index.html
+++ b/central-js/client/index.html
@@ -128,6 +128,7 @@
 <script src="app/common/components/form/directives/dropdownOrgan/dropdownOrgan.js"></script>
 <script src="app/common/components/form/directives/file.js"></script>
 <script src="app/common/components/form/directives/file2.js"></script>
+<script src="app/common/components/form/directives/place/placeControl.js"></script>
 <script src="app/common/components/form/directives/slotPicker.js"></script>
 <script src="app/common/components/form/directives/tel.js"></script>
 <script src="app/common/components/form/factories/datepicker.js"></script>
