єдиний компонент вибору місця placeControl.js (wip-2)

--- a/central-js/client/app/service/wizard/wizard.content.html
+++ b/central-js/client/app/service/wizard/wizard.content.html
@@ -41,9 +41,9 @@
 
 <div class="list-group">
 
-    <place-control ng-model="PlaceController"></place-control>
+    <place ng-model="PlaceController"></place>
 
-<!-- sample place-control content was derived from the service/city/content.html and now can be seen inside the placeControl.html -->
+<!-- sample place control content was derived from the service/city/content.html and now can be seen inside the placeControl.html -->
 
     <!-- step 2 -->
     <div ng-if="ngIfStep2()">
