--- a/central-js/client/app/service/city/built-in/bankid.html
+++ b/central-js/client/app/service/city/built-in/bankid.html
@@ -3,9 +3,9 @@
 
 <div class="list-group">
     <!-- FIXME -->
-    <place-control>
+    <place ng-model="PlaceController"></place>
 
-<!-- WAS: <div class="list-group-item disabled">
+    <!-- WAS: <div class="list-group-item disabled">
         <div class="row no-margin-bottom">
             <div class="col-md-11 form-inline">
                 <span class="step">Крок 1. Оберіть свій регіон - CLONE: service/city/built-in/bankid.html</span>
@@ -34,8 +34,8 @@
         </div>
     </div> -->
     
-    </place-control>
-    
+    </place>
+
     <div class="list-group-item disabled">
         <div class="row no-margin-bottom">
             <div class="col-md-11">Крок 2. Ви увійшли як {{data.formData.params.bankIdfirstName.value}}
