--- a/wf-region/src/main/resources/pattern/print/subsidy_zayava.html
+++ b/wf-region/src/main/resources/pattern/print/subsidy_zayava.html
@@ -202,7 +202,7 @@ p {font-size: 11px;}
                     <td>[garbage_notice]</td>
                 </tr>
             </table>
-            <div class="under_field_line wub ta-l ti-15">У разі коли прийняття рішення щодо моєї заяви потребує окремого рішення місцевих органів виконавчої влади/місцевого самоврядування або утвореної ними комісії, прошу розглянути/не розглядати мою заяву відповідними органами або утвореною ними комісією ([notice]).</div>
+            <div class="under_field_line wub ta-l ti-15">У разі коли прийняття рішення щодо моєї заяви потребує окремого рішення місцевих органів виконавчої влади/місцевого самоврядування або утвореної ними комісії, прошу розглянути/не розглядати мою заяву відповідними органами або утвореною ними комісією (ні).</div>
             <div class="under_field_line wub ta-l ti-15">Я та особи, які зареєстровані (фактично проживають) у житловому приміщенні/будинку, даємо згоду на обробку персональних даних про сім’ю, доходи, майно, що необхідні для призначення житлової субсидії, та оприлюднення відомостей щодо її призначення.</div>
             <div class="under_field_line wub ta-l ti-15">У разі зміни обставин, які можуть вплинути на отримання житлової субсидії (зміни складу осіб, які зареєстровані (фактично проживають), джерел доходу, переліку отримуваних житлово-комунальних послуг, придбання майна, товарів або оплати послуг на суму, що перевищує 50 тис. гривень), зобов’язуюся протягом місяця повідомити про це структурний підрозділ з питань соціального захисту населення.</div>
 
