--- a/dashboard-js/client/app/tasks/tasks.html
+++ b/dashboard-js/client/app/tasks/tasks.html
@@ -149,7 +149,7 @@
 -->
 
             <select class="aPatternPrint form-control_"
-                    ng-hide="aPatternPrintNew(taskForm)===null || aPatternPrintNew(taskForm).length===0"
+                    ng-hide="aPatternPrintNew(taskForm)===null || aPatternPrintNew(taskForm).length===0 || selectedTask.assignee == null || sSelectedTask == 'finished'"
                     >
               <option ng-repeat="oPatternPrint in aPatternPrintNew(taskForm)" value="{{oPatternPrint.id}}">{{oPatternPrint.name}}</option>
               <!--option ng-repeat="oPatternPrint in printTemplate.aPatternPrint()" value="{{oPatternPrint.sID}}">{{oPatternPrint.sLabel}}</option-->
