--- a/central-js/client/app/service/country/built-in/bankid.html
+++ b/central-js/client/app/service/country/built-in/bankid.html
@@ -1,5 +1,5 @@
-<!--div style="margin-top:20px; font-size:25px;">{{service.sName}}</div>
-<div style="margin-bottom:20px; font-size:18px;color:#cccccc;">{{service.sSubjectOperatorName}}</div-->
+<!--div class="service-name">{{service.sName}}</div>
+<div class="operator-name">{{service.sSubjectOperatorName}}</div-->
 
 <div class="list-group">
     <div class="list-group-item disabled">
